--- a/Pages/about.html
+++ b/Pages/about.html
@@ -151,7 +151,9 @@
                     class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/new-1.png" alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/new-1.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[15px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">599,99₽</p>
@@ -171,7 +173,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/discount-3.png" alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/discount-3.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -191,7 +195,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/discount-4.png" alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/discount-4.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">159,99₽</p>
@@ -211,7 +217,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/discount-2.png" alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/discount-2.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -234,7 +242,9 @@
                     class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[50px]">
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/image (69).png   " alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/image (69).png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[15px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">79,99₽</p>
@@ -254,7 +264,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/discount-4.png" alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/discount-4.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">159,99₽</p>
@@ -274,7 +286,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/new-1.png" alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/new-1.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">599,99₽</p>
@@ -294,7 +308,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="../assets/home/discount-2.png" alt="img">
+                        <a href="./single.html">
+                            <img class="w-full" src="../assets/home/discount-2.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">49,39₽</p>
@@ -328,7 +344,7 @@
                                 d="M15.3536 5.64645C15.5488 5.84171 15.5488 6.15829 15.3536 6.35355L9.70711 12L15.3536 17.6464C15.5488 17.8417 15.5488 18.1583 15.3536 18.3536C15.1583 18.5488 14.8417 18.5488 14.6464 18.3536L8.64645 12.3536C8.45118 12.1583 8.45118 11.8417 8.64645 11.6464L14.6464 5.64645C14.8417 5.45118 15.1583 5.45118 15.3536 5.64645Z"
                                 fill="#414141" />
                         </svg>
-                        <div class="flex items-center gap-[18px] sm:gap-[46px] w-[85px] overflow-x-scroll">
+                        <div class="flex items-center gap-[18px] sm:gap-[46px] w-[125px] overflow-x-scroll">
                             <p>1</p>
                             <p>2</p>
                             <p>3</p>
