--- a/Pages/Vacancies.html
+++ b/Pages/Vacancies.html
@@ -155,9 +155,9 @@
                     </a>
                 </div>
                 <div>
-                    <h1 class=" text-[34px] sm:text-[64px] font-bold">Вакансии</h1>
+                    <h1 class="text-[34px] sm:text-[64px] font-bold">Вакансии</h1>
                 </div>
-                <div class="grid grid-cols-3 gap-[40px] pt-[40px]">
+                <div class="flex flex-col items-center justify-center sm:grid grid-cols-2 md:grid-cols-3 gap-[20px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div class="max-w-[416px] w-full px-[32px] py-[32px] bg-[white] cursor-pointer">
                         <h1 class="text-[24px] font-bold">Должность</h1>
                         <p class="pt-[16px] pb-[8px] text-[18px]">Требования</p>
@@ -229,7 +229,7 @@
                     </div>
 
                 </div>
-                <div class="grid grid-cols-3 gap-[40px] pt-[20px] sm:pt-[40px]">
+                <div class="flex flex-col items-center justify-center  sm:grid grid-cols-2 md:grid-cols-3 gap-[20px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div class="max-w-[416px] w-full px-[32px] py-[32px] bg-[white] cursor-pointer">
                         <h1 class="text-[24px] font-bold">Должность</h1>
                         <p class="pt-[16px] pb-[8px] text-[18px]">Требования</p>
