--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
                     class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-1.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-1.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[8px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -196,7 +198,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-2.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-2.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[8px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -223,7 +227,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-3.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-3.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[8px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -250,7 +256,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-4.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-4.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[8px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -294,7 +302,9 @@
                     class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/new-1.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/new-1.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[15px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">599,99₽</p>
@@ -314,7 +324,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-3.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-3.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -334,7 +346,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-4.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-4.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">159,99₽</p>
@@ -354,7 +368,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-2.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-2.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">44,50₽</p>
@@ -391,7 +407,9 @@
                     class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/image (69).png   " alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/image (69).png   " alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[15px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">79,99₽</p>
@@ -411,7 +429,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-4.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-4.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">159,99₽</p>
@@ -431,7 +451,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/new-1.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/new-1.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">599,99₽</p>
@@ -451,7 +473,9 @@
                     </div>
                     <div
                         class="max-w-[372px] rounded-[4px] w-full cursor-pointer bg-[white] relative group overflow-hidden shadow-2xl p-[8px]">
-                        <img class="w-full" src="./assets/home/discount-2.png" alt="img">
+                        <a href="./Pages/single.html">
+                            <img class="w-full" src="./assets/home/discount-2.png" alt="img">
+                        </a>
                         <div class="flex items-center justify-between pt-[16px]">
                             <div>
                                 <p class="font-bold text-[14px] sm:text-[18px]">49,39₽</p>
