--- a/Pages/Vacancies.html
+++ b/Pages/Vacancies.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vacancies</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="../css/stayle.css">
 </head>
 
 <body>
 
-    <header class="py-[16px] bg-[white] fixed z-[100]  w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
+    <header class="py-[16px] bg-[white]  fixed z-[100]  w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] flex items-center justify-between 2xl:px-[127px]">
             <div>
                 <a class="flex items-center gap-[11px]" href="../index.html">
@@ -72,7 +72,7 @@
         </div>
     </header>
 
-    <div id="category" class="category bg-white fixed z-[10] w-full">
+    <div id="category" class="category  bg-white fixed z-[10] w-full">
         <div
             class="container mx-auto font-bold px-[20px] 2xl:px-[127px] pt-[125px] py-[40px] items-start flex items-center justify-center sm:grid grid-cols-2 md:grid-cols-4 transform translate-y-">
             <ul class="flex flex-col gap-[24px]">
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <div id="menus" class="menus fixed top-0 z-[100] pt-[10px] bg-[white] left-0  w-full h-full">
+    <div id="menus" class="menus  fixed top-0 z-[100] pt-[10px] bg-[white] left-0  w-full h-full">
         <div id="close" class="flex items-center gap-[5px] pl-[10px]">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.5 7L9.5 12L14.5 17" stroke="#313436" stroke-width="2" stroke-linecap="round"
@@ -145,7 +145,7 @@
     <main class="">
         <section class="pt-[70px] sm:pt-[110px] pb-[40px] sm:pb-[80px]">
             <div class="container mx-auto px-[20px] 2xl:px-[127px]">
-                <div class="flex items-center gap-[8px]">
+                <div class="flex items-center  gap-[8px]">
                     <a href="../index.html">
                         Главная
                     </a>
@@ -157,7 +157,8 @@
                 <div>
                     <h1 class="text-[34px] sm:text-[64px] font-bold">Вакансии</h1>
                 </div>
-                <div class="flex flex-col items-center justify-center sm:grid grid-cols-2 md:grid-cols-3 gap-[20px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
+                <div
+                    class="flex flex-col items-center justify-center sm:grid grid-cols-2 md:grid-cols-3 gap-[20px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div class="max-w-[416px] w-full px-[32px] py-[32px] bg-[white] cursor-pointer">
                         <h1 class="text-[24px] font-bold">Должность</h1>
                         <p class="pt-[16px] pb-[8px] text-[18px]">Требования</p>
@@ -229,7 +230,8 @@
                     </div>
 
                 </div>
-                <div class="flex flex-col items-center justify-center  sm:grid grid-cols-2 md:grid-cols-3 gap-[20px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
+                <div
+                    class="flex flex-col items-center justify-center  sm:grid grid-cols-2 md:grid-cols-3 gap-[20px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
                     <div class="max-w-[416px] w-full px-[32px] py-[32px] bg-[white] cursor-pointer">
                         <h1 class="text-[24px] font-bold">Должность</h1>
                         <p class="pt-[16px] pb-[8px] text-[18px]">Требования</p>
