--- a/Pages/single.html
+++ b/Pages/single.html
@@ -55,14 +55,14 @@
                     <img src="../assets/header/layk.png" alt="layk">
                     <p>Избранное</p>
                 </div>
-                <div class="flex cursor-pointer items-center flex-col gap-[7px]">
+                <a href="./category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
                     <img src="../assets/header/product.png" alt="product">
                     <p>продукты</p>
-                </div>
-                <div class="flex cursor-pointer items-center flex-col gap-[7px]">
+                </a>
+                <a href="./cart.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
                     <img src="../assets/header/cart.png" alt="cart">
                     <p>Корзина</p>
-                </div>
+                </a>
             </div>
             <div class="hidden lg:flex flex cursor-pointer items-center gap-[10px]">
                 <img src="../assets/header/avatar (7).png" alt="avatar">
@@ -565,8 +565,8 @@
                                 <p class="text-[26px] sm:text-[36px] font-bold">108,99₽</p>
                                 <div class="flex items-center gap-[7px]">
                                     <p class="text-[10px] sm:text-[12px] text-[#BFBFBF]">С картой Северяночки</p>
-                                    <svg class="w-[17px] sm:w-[20px] h-[17px] sm:h-[20px]" viewBox="0 0 24 24" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
+                                    <svg class="w-[17px] sm:w-[20px] h-[17px] sm:h-[20px]" viewBox="0 0 24 24"
+                                        fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
                                             d="M1.5 12C1.5 6.20101 6.20101 1.5 12 1.5C17.799 1.5 22.5 6.20101 22.5 12C22.5 17.799 17.799 22.5 12 22.5C6.20101 22.5 1.5 17.799 1.5 12ZM12 2.5C6.75329 2.5 2.5 6.75329 2.5 12C2.5 17.2467 6.75329 21.5 12 21.5C17.2467 21.5 21.5 17.2467 21.5 12C21.5 6.75329 17.2467 2.5 12 2.5Z"
                                             fill="#414141" />
@@ -595,7 +595,8 @@
                                         d="M1.33341 0.666672C0.965225 0.666672 0.666748 0.965149 0.666748 1.33334C0.666748 1.70153 0.965225 2.00001 1.33341 2.00001H6.10743C7.11719 7.72197 8.13785 13.4191 8.99916 19.1611C9.24392 20.7929 10.6456 22 12.2956 22H25.813C27.4019 22 28.77 20.8785 29.0816 19.3204L31.0005 9.72557C31.2481 8.48799 30.3015 7.33334 29.0394 7.33334H9.54737C9.14342 7.33334 8.77071 7.45202 8.45923 7.65458L7.32327 1.21748C7.26705 0.89891 6.99024 0.666672 6.66675 0.666672H1.33341ZM8.88808 9.43223C8.82762 9.02916 9.13979 8.66667 9.54737 8.66667H29.0394C29.4601 8.66667 29.7756 9.05155 29.6931 9.46408L27.7741 19.0589C27.5872 19.9938 26.7663 20.6667 25.813 20.6667H12.2956C11.3056 20.6667 10.4646 19.9424 10.3177 18.9634L8.88808 9.43223Z" />
                                 </svg>
 
-                                <p class="text-[18px] sm:text-[24px] text-[#70C05B] group-hover:text-white transition duration-300">
+                                <p
+                                    class="text-[18px] sm:text-[24px] text-[#70C05B] group-hover:text-white transition duration-300">
                                     В корзину
                                 </p>
                             </button>
@@ -895,7 +896,7 @@
             </svg>
             <p class="text-[12px]">Избранное</p>
         </div>
-        <div class="flex flex-col items-center">
+        <a href="./category.html" class="flex flex-col items-center">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M11.3325 1.89792C11.3324 1.89801 11.3327 1.89782 11.3325 1.89792L3.33366 5.89736L3.33255 5.89792C2.82288 6.15117 2.50045 6.67105 2.50005 7.24015V16.7636C2.49608 17.3335 2.81541 17.8564 3.32416 18.1132C3.32387 18.113 3.32445 18.1133 3.32416 18.1132L11.3237 22.1129C11.7462 22.3244 12.2438 22.3244 12.6663 22.113L20.6664 18.1129L20.6675 18.1124C21.1773 17.8591 21.4997 17.3391 21.5 16.7699V7.24042C21.4997 6.67121 21.1773 6.15121 20.6675 5.89792L20.6664 5.89736L12.6675 1.89792C12.6674 1.89782 12.6677 1.89801 12.6675 1.89792C12.2474 1.68935 11.7527 1.68934 11.3325 1.89792ZM10.8875 1.00238C11.5883 0.654153 12.4118 0.654153 13.1125 1.00238L13.1137 1.00293L21.1125 5.00238C21.1124 5.0023 21.1127 5.00247 21.1125 5.00238C21.9618 5.42464 22.4995 6.29138 22.5 7.23988V16.7701C22.4995 17.7186 21.9624 18.5853 21.1132 19.0076C21.113 19.0077 21.1134 19.0075 21.1132 19.0076L13.1138 23.0073C13.1138 23.0073 13.1138 23.0073 13.1138 23.0073C12.4097 23.3596 11.5806 23.3597 10.8764 23.0074C10.8764 23.0073 10.8765 23.0074 10.8764 23.0074L2.87644 19.0074L2.87506 19.0067C2.02685 18.5793 1.49413 17.7082 1.50005 16.7585V7.24015C1.50055 6.29169 2.03772 5.42496 2.88695 5.00268C2.88675 5.00278 2.88715 5.00258 2.88695 5.00268L10.8864 1.00294L10.8875 1.00238Z"
@@ -912,7 +913,7 @@
             </svg>
 
             <p class="text-[12px]">Заказы</p>
-        </div>
+        </a>
         <a href="./cart.html" class="flex items-center flex-col">
 
             <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
