--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <img src="./assets/header/layk.png" alt="layk">
                     <p>Избранное</p>
                 </div>
-                <div class="flex cursor-pointer items-center flex-col gap-[7px]">
+                <a href="./Pages/category.html" class="flex cursor-pointer items-center flex-col gap-[7px]">
                     <img src="./assets/header/product.png" alt="product">
                     <p>продукты</p>
-                </div>
+                </a>
                 <a href="./Pages/cart.html">
                     <div class="flex cursor-pointer items-center flex-col gap-[7px]">
                         <img src="./assets/header/cart.png" alt="cart">
@@ -535,19 +535,19 @@
                 <h1 class="text-[24px] sm:text-[36px] font-bold">Наши магазины</h1>
                 <div class="flex items-center gap-[18px] sm:gap-[24px] pt-[30px] sm:pt-[40px]">
                     <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
-                        href="">
+                        href="./Pages/contact.html">
                         п.Щельяюр
                     </a>
                     <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
-                        href="">
+                        href="./Pages/contact.html">
                         д.Вертеп
                     </a>
                     <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
-                        href="">
+                        href="./Pages/contact.html">
                         с.Краснобор
                     </a>
                     <a class="bg-[#F3F2F1] group hover:bg-[#70C05B] hover:text-[white] duration-[0.3s] p-[8px] rounded-[4px] text-[12px]"
-                        href="">
+                        href="./Pages/contact.html">
                         д.Диюр
                     </a>
                 </div>
@@ -585,7 +585,7 @@
                                 и перчаток на <br> территории магазинов
                                 "ЛЕНТА". Информация <br> обновляется каждый будний день.</p>
                             <a class="bg-[#E5FFDE] rounded-[4px]  hover:text-[white] duration-[0.3s] text-[#70C05B] px-[35px] group hover:bg-[#70C05B] p-[10px]"
-                                href="">
+                                href="./Pages/Vacancies.html">
                                 Подробнее
                             </a>
                         </div>
@@ -604,7 +604,7 @@
                                 и перчаток на <br> территории магазинов
                                 "ЛЕНТА". Информация <br> обновляется каждый будний день.</p>
                             <a class="bg-[#E5FFDE] rounded-[4px]  hover:text-[white] duration-[0.3s] text-[#70C05B] px-[35px] group hover:bg-[#70C05B] p-[10px]"
-                                href="">
+                                href="./Pages/Vacancies.html">
                                 Подробнее
                             </a>
                         </div>
@@ -622,7 +622,7 @@
                                 и перчаток на <br> территории магазинов
                                 "ЛЕНТА". Информация <br> обновляется каждый будний день.</p>
                             <a class="bg-[#E5FFDE] rounded-[4px]  hover:text-[white] duration-[0.3s] text-[#70C05B] px-[35px] group hover:bg-[#70C05B] p-[10px]"
-                                href="">
+                                href="./Pages/Vacancies.html">
                                 Подробнее
                             </a>
                         </div>
@@ -681,7 +681,7 @@
             </svg>
             <p class="text-[12px]">Избранное</p>
         </div>
-        <div class="flex flex-col items-center">
+        <a href="./Pages/category.html" class="flex flex-col items-center">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M11.3325 1.89792C11.3324 1.89801 11.3327 1.89782 11.3325 1.89792L3.33366 5.89736L3.33255 5.89792C2.82288 6.15117 2.50045 6.67105 2.50005 7.24015V16.7636C2.49608 17.3335 2.81541 17.8564 3.32416 18.1132C3.32387 18.113 3.32445 18.1133 3.32416 18.1132L11.3237 22.1129C11.7462 22.3244 12.2438 22.3244 12.6663 22.113L20.6664 18.1129L20.6675 18.1124C21.1773 17.8591 21.4997 17.3391 21.5 16.7699V7.24042C21.4997 6.67121 21.1773 6.15121 20.6675 5.89792L20.6664 5.89736L12.6675 1.89792C12.6674 1.89782 12.6677 1.89801 12.6675 1.89792C12.2474 1.68935 11.7527 1.68934 11.3325 1.89792ZM10.8875 1.00238C11.5883 0.654153 12.4118 0.654153 13.1125 1.00238L13.1137 1.00293L21.1125 5.00238C21.1124 5.0023 21.1127 5.00247 21.1125 5.00238C21.9618 5.42464 22.4995 6.29138 22.5 7.23988V16.7701C22.4995 17.7186 21.9624 18.5853 21.1132 19.0076C21.113 19.0077 21.1134 19.0075 21.1132 19.0076L13.1138 23.0073C13.1138 23.0073 13.1138 23.0073 13.1138 23.0073C12.4097 23.3596 11.5806 23.3597 10.8764 23.0074C10.8764 23.0073 10.8765 23.0074 10.8764 23.0074L2.87644 19.0074L2.87506 19.0067C2.02685 18.5793 1.49413 17.7082 1.50005 16.7585V7.24015C1.50055 6.29169 2.03772 5.42496 2.88695 5.00268C2.88675 5.00278 2.88715 5.00258 2.88695 5.00268L10.8864 1.00294L10.8875 1.00238Z"
@@ -698,7 +698,7 @@
             </svg>
 
             <p class="text-[12px]">Заказы</p>
-        </div>
+        </a>
         <a href="./Pages/cart.html" class="flex items-center flex-col">
             <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
