--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </a>
             </div>
-            <div class="hidden lg:flex flex cursor-pointer items-center gap-[10px]">
+            <div id="register-head" class="hidden lg:flex flex items-center cursor-pointer gap-[10px]">
                 <img src="./assets/header/avatar (7).png" alt="avatar">
                 <p>Алексей</p>
                 <img src="./assets/header/Button (4).png" alt="Button">
@@ -142,6 +142,34 @@
             <hr class="text-[#70C05B]">
         </ul>
     </div>
+
+    <!-- <div id="register" class="register bg-[#FCD5BACC]/80 h-full w-full z-[1] fixed flex items-center justify-center">
+        <div
+            class="max-w-[420px] rounded-[5px] h-auto w-full pb-[40px] bg-[white] relative flex items-center justify-center flex-col pt-[72px]">
+            <svg id="register-close" class="absolute right-0 top-0 bg-[#F3F2F1] rounded-[4px] " width="24" height="24" viewBox="0 0 24 24"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M18.3536 5.64645C18.5488 5.84171 18.5488 6.15829 18.3536 6.35355L6.35355 18.3536C6.15829 18.5488 5.84171 18.5488 5.64645 18.3536C5.45118 18.1583 5.45118 17.8417 5.64645 17.6464L17.6464 5.64645C17.8417 5.45118 18.1583 5.45118 18.3536 5.64645Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.64645 5.64645C5.84171 5.45118 6.15829 5.45118 6.35355 5.64645L18.3536 17.6464C18.5488 17.8417 18.5488 18.1583 18.3536 18.3536C18.1583 18.5488 17.8417 18.5488 17.6464 18.3536L5.64645 6.35355C5.45118 6.15829 5.45118 5.84171 5.64645 5.64645Z"
+                    fill="#414141" />
+            </svg>
+            <h1 class="font-bold text-[24px]">Вход</h1>
+            <div class="pt-[32px]">
+                <label class="text-[#8F8F8F] text-[18px]">Телефон</label> <br>
+                <input class="border-[1px] border-[#70C05B] pl-[16px] py-[12px] rounded-[4px] text-[18px] outline-none"
+                    type="tel" placeholder="+998" name="" id="">
+            </div>
+            <div class="bg-[#FCD5BA] px-[83px] mt-[32px] rounded-[5px] py-[10px]">
+               <p class="text-[24px] text-[#FF6633]">Вход</p>
+            </div>
+            <div class="pt-[36px]">
+                <a href="" class="max-w-[121px] px-[8px] text-[12px] rounded-[4px] text-[#70C05B] py-[4px] w-full border-[1px]">Регистрация</a>
+                <a href="" class="max-w-[121px] px-[8px] text-[12px] rounded-[4px] py-[4px] w-full">Забыли пароль?</a>
+            </div>
+        </div>
+    </div> -->
 
     <main>
         <section class="bg-[url('../assets/Home/hero-bg.png')] h-[140px] sm:h-auto pt-[90px]">
