--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -11,6 +11,16 @@
 
 <body>
 
+    <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center    ">
+        <div class="relative">
+            <img src="../assets/loading/loading.svg" alt="loading">
+            <div>
+                <p class="absolute top-13 left-9.5 text-[12px] text-[#e5b636]">Loading...</p>
+            </div>
+        </div>
+
+    </div>
+
     <header class="py-[16px] bg-[white] fixed z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
             <div>
@@ -533,7 +543,7 @@
     </footer>
 
 
-       </div>
+    </div>
 
 
 
