--- a/Pages/register.html
+++ b/Pages/register.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+    <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center    ">
+        <div class="relative">
+            <img src="../assets/loading/loading.svg" alt="loading">
+            <div>
+                <p class="absolute top-13 left-9.5 text-[12px] text-[#e5b636]">Loading...</p>
+            </div>
+        </div>
+
+    </div>
 
     <header class="py-[16px] bg-[white] fixed z-[100] w-full shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
         <div class="container mx-auto px-[20px] gap-[40px] 2xl:px-[127px] flex items-center justify-between">
@@ -203,7 +212,8 @@
 
     <main>
         <section>
-            <div class="container mx-auto px-[20px] pt-[170px] sm:pt-[160px] pb-[80px] sm:pb-[220px] flex items-center justify-center">
+            <div
+                class="container mx-auto px-[20px] pt-[170px] sm:pt-[160px] pb-[80px] sm:pb-[220px] flex items-center justify-center">
                 <div class="max-w-[502px] w-full bg-[white] rounded-[5px] px-[18px] py-[25px]">
                     <div class="flex items-center justify-center">
                         <svg width="40" height="32" viewBox="0 0 40 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -239,8 +249,7 @@
     </main>
 
 
-    <footer
-        class="bg-[url('/assets/header/pattern2.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2]">
+    <footer class="bg-[url('/assets/header/pattern2.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2]">
         <div class="container  mx-auto px-[20px] 2xl:px-[127px]">
             <div class=" grid grid-cols-1 gap-[30px] lg:flex items-center justify-between">
                 <div class="grid grid-cols-2 gap-[40px]">
