--- a/Pages/menus.html
+++ b/Pages/menus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vacancies</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="../css/stayle.css">
 </head>
@@ -47,6 +47,7 @@
                     </svg>
                     <p class="text-[white]">Каталог</p>
                 </div>
+
                 <div id="menus-category-close"
                     class="category-close flex hidden sm:flex w-[140px]  rounded-[5px] h-[40px] justfiy-between pl-[8px] pr-[15px] gap-[20px] items-center bg-[#70C05B]">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -70,17 +71,9 @@
                         </svg>
                     </a>
                 </div>
-                <div class="hidden md:flex">
-                    <div class="w-[460px] relative">
-                        <input id="search-input"
-                            class="w-full h-[40px] rounded-[4px] border-[1px] border-[#70C05B0] px-[20px] outline-none"
-                            placeholder="Найти товар" type="search">
-                        <div id="search-cards"
-                            class="w-full flex flex-col gap-[10px] hidden max-h-[250px] overflow-y-scroll px-[10px] absolute rounded-b-[4px] top-[40px] py-[15px] bg-[white]">
-
-                        </div>
-                    </div>
-
+                <div class="hidden md:flex w-[460px]">
+                    <input class="w-full h-[40px] rounded-[6px] border-[1px] border-[#70C05B0] px-[20px] outline-none"
+                        placeholder="Найти товар" type="search">
                 </div>
             </div>
             <div class="hidden xl:flex flex items-center gap-[24px] text-[12px]">
@@ -154,7 +147,7 @@
         </div>
     </header>
 
-    <div id="category" class="category bg-white fixed z-[10] w-full">
+    <div id="category" class="category  bg-white fixed z-[10] w-full">
         <div
             class="container mx-auto font-bold px-[20px] 2xl:px-[127px] pt-[125px] py-[40px] items-start flex items-center justify-center sm:grid grid-cols-2 md:grid-cols-4 transform translate-y-">
             <ul class="flex flex-col gap-[24px]">
@@ -181,7 +174,7 @@
         </div>
     </div>
 
-    <div id="menus" class="menus fixed top-0 z-[100] pt-[10px] bg-[white] left-0  w-full h-full">
+    <div id="menus" class="menus  fixed top-0 z-[100] pt-[10px] bg-[white] left-0  w-full h-full">
         <div id="close" class="flex items-center gap-[5px] pl-[10px]">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14.5 7L9.5 12L14.5 17" stroke="#313436" stroke-width="2" stroke-linecap="round"
@@ -224,47 +217,88 @@
         </ul>
     </div>
 
+    <div id="register" class="register bg-[#FCD5BACC]/80 h-full w-full z-[0] fixed flex items-center justify-center">
+        <div
+            class="max-w-[420px] rounded-[5px] h-auto w-full pb-[40px] bg-[white] relative flex items-center justify-center flex-col pt-[72px]">
+            <svg id="register-close" class="cursor-pointer absolute right-0 top-0 bg-[#F3F2F1] rounded-[4px] "
+                width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M18.3536 5.64645C18.5488 5.84171 18.5488 6.15829 18.3536 6.35355L6.35355 18.3536C6.15829 18.5488 5.84171 18.5488 5.64645 18.3536C5.45118 18.1583 5.45118 17.8417 5.64645 17.6464L17.6464 5.64645C17.8417 5.45118 18.1583 5.45118 18.3536 5.64645Z"
+                    fill="#414141" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.64645 5.64645C5.84171 5.45118 6.15829 5.45118 6.35355 5.64645L18.3536 17.6464C18.5488 17.8417 18.5488 18.1583 18.3536 18.3536C18.1583 18.5488 17.8417 18.5488 17.6464 18.3536L5.64645 6.35355C5.45118 6.15829 5.45118 5.84171 5.64645 5.64645Z"
+                    fill="#414141" />
+            </svg>
+            <h1 class="font-bold text-[24px]">Вход</h1>
+            <div class="pt-[32px]">
+                <label class="text-[#8F8F8F] text-[18px]">Телефон</label> <br>
+                <input class="border-[1px] border-[#70C05B] pl-[16px] py-[12px] rounded-[4px] text-[18px] outline-none"
+                    type="tel" placeholder="+998" name="" id="">
+            </div>
+            <div class="bg-[#FCD5BA] cursor-pointer px-[83px] mt-[32px] rounded-[5px] py-[10px]">
+                <p class="text-[24px] text-[#FF6633]">Вход</p>
+            </div>
+            <div class="pt-[36px]">
+                <a href=""
+                    class="cursor-pointer max-w-[121px] px-[8px] text-[12px] rounded-[4px] text-[#70C05B] py-[4px] w-full border-[1px]">Регистрация</a>
+                <a href=""
+                    class="max-w-[121px] cursor-pointer px-[8px] text-[12px] rounded-[4px] py-[4px] w-full">Забыли
+                    пароль?</a>
+            </div>
+        </div>
+    </div>
+
     <main>
         <section>
-            <div
-                class="container mx-auto px-[20px] pt-[135px] sm:pt-[160px] pb-[50px] sm:pb-[220px] flex items-center justify-center">
-                <div class="max-w-[502px] w-full bg-[white] rounded-[5px] px-[18px] py-[25px]">
-                    <div class="flex items-center justify-center">
-                        <svg width="40" height="32" viewBox="0 0 40 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M35.6689 16.819H4.28623C3.62872 16.819 3.09179 17.3764 3.15209 18.0343C3.84119 25.8488 11.1112 31.9999 19.9776 31.9999C28.844 31.9999 36.1139 25.8517 36.803 18.0343C36.8605 17.3764 36.3264 16.819 35.6689 16.819Z"
-                                fill="#FF6633" />
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M0.225147 3.33137C1.7887 1.27854 4.60645 0 7.711 0C10.8155 0 13.6333 1.27854 15.1969 3.33137C15.5659 3.81589 15.4714 4.50716 14.9858 4.87537C14.5001 5.24357 13.8073 5.14928 13.4383 4.66476C12.3661 3.25707 10.2569 2.20377 7.711 2.20377C5.16509 2.20377 3.05591 3.25707 1.98374 4.66476C1.6147 5.14928 0.921857 5.24357 0.436236 4.87537C-0.0493858 4.50716 -0.143894 3.81589 0.225147 3.33137Z"
-                                fill="#414141" />
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M24.7671 3.33137C26.3307 1.27854 29.1484 0 32.253 0C35.3552 0 38.1721 1.27884 39.7381 3.33045C40.1077 3.81458 40.0139 4.50596 39.5287 4.87467C39.0434 5.24338 38.3505 5.14981 37.981 4.66568C36.9055 3.25676 34.7955 2.20377 32.253 2.20377C29.7071 2.20377 27.5979 3.25707 26.5257 4.66476C26.1567 5.14928 25.4638 5.24357 24.9782 4.87537C24.4926 4.50716 24.3981 3.81589 24.7671 3.33137Z"
-                                fill="#414141" />
+            <div class="container mx-auto px-[20px]">
+                <div class="fixed top-0 z-[100] pt-[10px] bg-[white] left-0  w-full h-full">
+                    <a href="../index.html" class="flex items-center gap-[5px] pl-[10px]">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.5 7L9.5 12L14.5 17" stroke="#313436" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
                         </svg>
-                    </div>
-                    <div class="flex flex-col gap-[15px] pt-[22px]">
-                        <input
-                            class="border-[1px]  border-[#70C05B] text-[12px] px-[5px] py-[12px] rounded-[5px] w-full outline-none"
-                            type="email" placeholder="Введите свой адрес электронной почты.">
-                        <input
-                            class="border-[1px] border-[#70C05B] bg-[transparent] text-[12px] px-[5px] py-[12px] rounded-[5px] w-full outline-none"
-                            type="password" placeholder="Введите свой пароль.">
-                        <button
-                            class="border-[1px] w-full rounded-[5px] border-[#70C05B] py-[12px] cursor-pointer bg-[transparent] group hover:bg-[#FF6633] duration-200 text-[#70C05B] hover:text-[white]">
-                            <p>Отправить</p>
-                        </button>
-                    </div>
-                    <div class="text-[12px] pt-[12px]">
-                        <p>Укажите действующий адрес электронной почты для входа в аккаунт.</p>
-                    </div>
+                        <p class="font-bold text-[24px]">Каталог</p>
+                    </a>
+                    <hr class="text-[#70C05B]">
+                    <ul class="flex px-[15px] flex-col py-[25px] gap-[7px] h-[680px] overflow-y-scroll">
+                        <li>Молоко, сыр, яйцо</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Хлеб</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Фрукты и овощи</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Замороженные продукты</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Напитки</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Кондитерские изделия</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Чай, кофе</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Бакалея</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Здоровое питание</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Зоотовары</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Непродовольственные товары</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Детское питание</li>
+                        <hr class="text-[#70C05B]">
+                        <li>Мясо, птица, колбаса</li>
+                        <hr class="text-[#70C05B]">
+                    </ul>
                 </div>
             </div>
         </section>
     </main>
 
 
-    <footer class="bg-[url('/assets/header/pattern2.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2]">
-        <div class="container  mx-auto px-[20px] 2xl:px-[127px] pb-[50px] sm:pb-[0px]">
+
+
+    <footer
+        class="bg-[url('/assets/header/pattern2.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2] pb-[100px] sm:pb-[15px]">
+        <div class="container  mx-auto px-[20px] 2xl:px-[127px]">
             <div class=" grid grid-cols-1 gap-[30px] lg:flex items-center justify-between">
                 <div class="grid grid-cols-2 gap-[40px]">
                     <div class="flex items-center gap-[20px] lg:gap-[40px]">
@@ -322,8 +356,7 @@
         </div>
     </footer>
 
-    
-     <div
+    <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[15px] z-[900]">
         <a class="flex flex-col items-center" href="../index.html">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -383,12 +416,9 @@
         </a>
     </div>
 
-
-    <script src="../products-data/products-data.js"></script>
-    <script src="../js/filter.js"></script>
+    <script src="../js/main_2.js"></script>
     <script src="../js/loading.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/main_2.js"></script>
 </body>
 
 </html>
