--- a/Pages/search.html
+++ b/Pages/search.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center    ">
+    <div id="loading" class="fixed z-1500 w-full h-full bg-[white] flex items-center justify-center">
         <div class="relative">
             <img src="../assets/loading/loading.svg" alt="loading">
             <div>
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-    </div> -->
+    </div>
 
     <div id="menus" class="menus  fixed top-0 z-[100] pt-[10px] bg-[white] left-0  w-full h-full">
         <div id="close" class="flex items-center gap-[5px] pl-[10px]">
@@ -66,12 +66,18 @@
     <main>
         <section class="flex sm:hidden">
             <div class="container mx-auto px-[20px] pt-[30px] sm:pt-[80px] 2xl:px-[127px]">
-                <div class="flex items-center gap-[7px]">
+                <div class="flex items-center gap-[7px] bg-[white]">
                     <div class="relative max-w-[750px] w-full flex items-center gap-[7px]">
-                        <input class="border-[1px] w-full py-[6px] rounded-[8px] pl-[30px] pr-[20px] outline-none"
+                        <input id="search-phone"
+                            class="border-[1px] w-full py-[6px] rounded-[8px] pl-[30px] pr-[20px] outline-none"
                             placeholder="Найти товар" type="search">
                         <img class="absolute top-2 left-[4px]" src="../assets/header/search2.svg" alt="search">
+                        <div id="search-cards-phone"
+                            class="w-full flex flex-col gap-[10px] hidden max-h-[500px] overflow-y-scroll px-[10px] absolute rounded-b-[4px] top-[40px] py-[15px] bg-[white]">
+
+                        </div>
                     </div>
+
                 </div>
                 <div
                     class="search-products grid grid-cols-3 md:grid-cols-3 xl:grid-cols-4 gap-[10px] sm:gap-[40px] pt-[20px] sm:pt-[40px]">
@@ -83,67 +89,6 @@
     </main>
 
 
-
-
-    <footer
-        class="bg-[url('/assets/header/pattern2.png')] py-[18px] sm:py-[25px]  bg-[#F9F4E2] pb-[100px] sm:pb-[15px]">
-        <div class="container  mx-auto px-[20px] 2xl:px-[127px]">
-            <div class=" grid grid-cols-1 gap-[30px] lg:flex items-center justify-between">
-                <div class="grid grid-cols-2 gap-[40px]">
-                    <div class="flex items-center gap-[20px] lg:gap-[40px]">
-                        <img src="../assets/header/logo (10).png" alt="logo">
-                        <p class="text-[12px] sm:text-[16px] whitespace-nowrap">О компании</p>
-                        <p class="text-[12px] sm:text-[16px] whitespace-nowrap">Контакты </p>
-                        <p class="whitespace-nowrap text-[12px] sm:text-[16px]">Вакансии</p>
-                    </div>
-                    <div class="flex items-center gap-[20px] lg:gap-[40px]">
-                        <p class="hidden sm:flex">Статьи</p>
-                        <p class="hidden 2xl:flex">Политика обработки персональных данных</p>
-                    </div>
-                </div>
-                <div class="flex items-center gap-[40px]">
-                    <div class="flex items-center gap-[16px]">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M15.75 2H8.25C4.79875 2 2 4.79875 2 8.25V15.75C2 19.2013 4.79875 22 8.25 22H15.75C19.2013 22 22 19.2013 22 15.75V8.25C22 4.79875 19.2013 2 15.75 2ZM20.125 15.75C20.125 18.1625 18.1625 20.125 15.75 20.125H8.25C5.8375 20.125 3.875 18.1625 3.875 15.75V8.25C3.875 5.8375 5.8375 3.875 8.25 3.875H15.75C18.1625 3.875 20.125 5.8375 20.125 8.25V15.75ZM12.0002 7.2002C9.3494 7.2002 7.2002 9.3494 7.2002 12.0002C7.2002 14.651 9.3494 16.8002 12.0002 16.8002C14.651 16.8002 16.8002 14.651 16.8002 12.0002C16.8002 9.3494 14.651 7.2002 12.0002 7.2002ZM12.0002 15.0002C10.3466 15.0002 9.0002 13.6538 9.0002 12.0002C9.0002 10.3454 10.3466 9.0002 12.0002 9.0002C13.6538 9.0002 15.0002 10.3454 15.0002 12.0002C15.0002 13.6538 13.6538 15.0002 12.0002 15.0002ZM17.9998 6.6C17.9998 6.93137 17.7312 7.2 17.3998 7.2C17.0684 7.2 16.7998 6.93137 16.7998 6.6C16.7998 6.26863 17.0684 6 17.3998 6C17.7312 6 17.9998 6.26863 17.9998 6.6Z"
-                                fill="url(#paint0_linear_45177_8511)" />
-                            <defs>
-                                <linearGradient id="paint0_linear_45177_8511" x1="4.92912" y1="19.0709" x2="19.0709"
-                                    y2="4.92912" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FFC107" />
-                                    <stop offset="0.507" stop-color="#F44336" />
-                                    <stop offset="0.99" stop-color="#9C27B0" />
-                                </linearGradient>
-                            </defs>
-                        </svg>
-                        <svg width="20" height="12" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M9.786 11.3635H10.9811C10.9811 11.3635 11.3424 11.3234 11.5261 11.1247C11.6961 10.9422 11.6899 10.5996 11.6899 10.5996C11.6899 10.5996 11.6661 8.99577 12.4112 8.75951C13.145 8.52699 14.0876 10.3096 15.0864 10.9959C15.8414 11.5147 16.4152 11.401 16.4152 11.401L19.0867 11.3635C19.0867 11.3635 20.4843 11.2772 19.8217 10.1784C19.768 10.0884 19.4355 9.3658 17.8353 7.88069C16.1602 6.32558 16.3852 6.57809 18.4029 3.88915C19.6317 2.25152 20.123 1.25145 19.9692 0.823917C19.823 0.416387 18.9192 0.523895 18.9192 0.523895L15.9139 0.541396C15.9139 0.541396 15.6914 0.511394 15.5252 0.610151C15.3639 0.707659 15.2601 0.932675 15.2601 0.932675C15.2601 0.932675 14.7839 2.20027 14.1488 3.27785C12.81 5.55177 12.2737 5.67178 12.0549 5.53052C11.5461 5.20174 11.6736 4.20792 11.6736 3.50287C11.6736 1.29895 12.0074 0.380134 11.0223 0.142616C10.6948 0.0638606 10.4548 0.0113567 9.61848 0.00260608C8.54591 -0.00864475 7.63709 0.00635636 7.1233 0.257625C6.78078 0.425137 6.51701 0.798916 6.67827 0.820167C6.87703 0.846419 7.32707 0.941426 7.56583 1.26645C7.87461 1.68523 7.86336 2.6278 7.86336 2.6278C7.86336 2.6278 8.04087 5.22174 7.44958 5.54427C7.0433 5.76553 6.487 5.31425 5.29317 3.25035C4.68187 2.19402 4.21934 1.02518 4.21934 1.02518C4.21934 1.02518 4.13058 0.807666 3.97182 0.691407C3.77931 0.550147 3.50929 0.505144 3.50929 0.505144L0.651577 0.522645C0.651577 0.522645 0.222795 0.535146 0.0652839 0.72141C-0.0747264 0.887672 0.054033 1.2302 0.054033 1.2302C0.054033 1.2302 2.2917 6.46434 4.82438 9.10328C7.1483 11.5222 9.786 11.3635 9.786 11.3635Z"
-                                fill="#1E88E5" />
-                        </svg>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M4.5 2H19.5C20.8787 2 22 3.12125 22 4.5V19.5C22 20.8787 20.8787 22 19.5 22H15.75V15.125H17.625L18.875 12H15.75V9.5C15.75 8.86577 16.2231 8.86942 16.8355 8.87416C16.8893 8.87458 16.9442 8.875 17 8.875H18.25V5.75H15.75C13.6788 5.75 12 7.42875 12 9.5V12H9.5V15.125H12V22H4.5C3.12125 22 2 20.8787 2 19.5V4.5C2 3.12125 3.12125 2 4.5 2Z"
-                                fill="#1976D2" />
-                        </svg>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M11.792 5.0251C12.9705 5.0251 13.9291 5.98373 13.9291 7.16224C13.9291 8.33977 12.9702 9.29839 11.792 9.29839C10.6142 9.29839 9.65532 8.33977 9.65532 7.16224C9.65507 5.98348 10.6144 5.0251 11.792 5.0251ZM11.792 12.322C14.6387 12.322 16.9537 10.0077 16.9537 7.16224C16.9537 4.31528 14.6389 2 11.792 2C8.94549 2 6.63021 4.31552 6.63021 7.16224C6.63021 10.0077 8.94549 12.322 11.792 12.322ZM13.8802 16.5323C14.942 16.2905 15.9554 15.8709 16.8774 15.2913C17.2168 15.0777 17.4575 14.7381 17.5465 14.3471C17.6355 13.9561 17.5655 13.5457 17.352 13.2063C17.2464 13.038 17.1086 12.8923 16.9466 12.7773C16.7846 12.6624 16.6016 12.5805 16.4079 12.5363C16.2142 12.4922 16.0138 12.4866 15.8179 12.52C15.6221 12.5534 15.4348 12.6251 15.2667 12.7309C13.1521 14.0604 10.4304 14.0594 8.31744 12.7309C8.14938 12.625 7.96209 12.5534 7.76629 12.52C7.57049 12.4865 7.37002 12.4921 7.17636 12.5362C6.98271 12.5804 6.79965 12.6623 6.63768 12.7773C6.47571 12.8922 6.338 13.038 6.23243 13.2063C6.01882 13.5456 5.94874 13.9559 6.03761 14.3469C6.12647 14.7379 6.36701 15.0776 6.70631 15.2913C7.62823 15.8707 8.64137 16.2902 9.703 16.5323L6.81749 19.4183C6.53392 19.702 6.37466 20.0867 6.37473 20.4878C6.3748 20.8888 6.5342 21.2735 6.81786 21.5571C7.10153 21.8406 7.48622 21.9999 7.88731 21.9998C8.2884 21.9997 8.67304 21.8403 8.95661 21.5567L11.7915 18.7213L14.6281 21.5569C14.7683 21.6974 14.9349 21.8088 15.1182 21.8848C15.3016 21.9609 15.4981 22 15.6966 22C15.8951 22 16.0917 21.9609 16.275 21.8848C16.4584 21.8088 16.6249 21.6974 16.7652 21.5569C16.9059 21.4167 17.0175 21.2501 17.0936 21.0666C17.1698 20.8832 17.209 20.6865 17.209 20.4879C17.209 20.2892 17.1698 20.0926 17.0936 19.9091C17.0175 19.7257 16.9059 19.559 16.7652 19.4188L13.8802 16.5323Z"
-                                fill="#EE8208" />
-                        </svg>
-                    </div>
-                    <div class="    flex items-center gap-[5px]">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M0.530549 5.62795C0.29859 3.78205 1.87862 2.5 3.57554 2.5H7.1672C7.89213 2.5 8.51333 3.01844 8.64301 3.73167L9.24935 7.06653C9.43046 8.06268 9.17133 9.08845 8.53884 9.87906L7.81545 10.7833C7.68654 10.9444 7.67475 11.1581 7.77434 11.3205C8.2439 12.0862 9.08857 13.3797 9.85533 14.1464C10.6221 14.9132 11.9156 15.7579 12.6813 16.2274C12.8437 16.327 13.0573 16.3152 13.2185 16.1863L14.1227 15.4629C14.9133 14.8304 15.9391 14.5713 16.9352 14.7524L20.2701 15.3588C20.9833 15.4885 21.5018 16.1096 21.5018 16.8346V20.1816C21.5018 22.0032 20.0508 23.624 18.1171 23.313C14.8045 22.7803 10.0694 21.0768 6.13538 16.8402C2.31033 12.7209 0.893311 8.51475 0.530549 5.62795ZM3.57554 3.5C2.31103 3.5 1.38547 4.41084 1.52275 5.50326C1.86104 8.19537 3.19444 12.2034 6.86818 16.1598C10.6177 20.1977 15.1307 21.8199 18.2758 22.3257C19.4703 22.5178 20.5018 21.5285 20.5018 20.1816V16.8346C20.5018 16.5929 20.329 16.3859 20.0912 16.3426L16.7564 15.7363C16.0448 15.6069 15.3121 15.792 14.7474 16.2438L13.8432 16.9672C13.3653 17.3495 12.6937 17.4081 12.1585 17.0799C11.3953 16.6119 10.008 15.7133 9.14823 14.8536C8.28849 13.9938 7.3899 12.6064 6.92187 11.8433C6.59367 11.3081 6.65231 10.6364 7.03458 10.1586L7.75797 9.25437C8.20975 8.68964 8.39485 7.95695 8.26548 7.24541L7.65914 3.91056C7.61591 3.67281 7.40885 3.5 7.1672 3.5H3.57554Z"
-                                fill="#414141" />
-                        </svg>
-                        <p class="whitespace-nowrap">8 800 777 33 33</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 
     <div
         class="flex sm:hidden bg-[white] flex fixed h-[10vw] w-[100vw] bottom-[0px] justify-between items-center flex py-[30px] px-[15px] z-[900]">
@@ -206,6 +151,7 @@
     </div>
     <script src="../products-data/products-data.js"></script>
     <script src="../js/search.js"></script>
+    <script src="../js/loading.js"></script>
     <script src="../js/main_2.js"></script>
     <script src="../js/main.js"></script>
 </body>
