--- a/Pages/single.html
+++ b/Pages/single.html
@@ -47,7 +47,6 @@
                     </svg>
                     <p class="text-[white]">Каталог</p>
                 </div>
-
                 <div id="menus-category-close"
                     class="category-close flex hidden sm:flex w-[140px]  rounded-[5px] h-[40px] justfiy-between pl-[8px] pr-[15px] gap-[20px] items-center bg-[#70C05B]">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -57,16 +56,31 @@
                     </svg>
                     <p class="text-[white]">Каталог</p>
                 </div>
-                <div id="search-category" class="flex sm:hidden flex items-center gap-[10px]">
-                    <svg class="flex sm:hidden" id="search" xmlns="http://www.w3.org/2000/svg" height="31.75px"
-                        viewBox="0 -960 960 960" width="31.75px" fill="#1f1f1f#1f1f1f#1f1f1f">
+                <div class="flex sm:hidden gap-[7px] items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                        fill="#414141">
                         <path
-                            d="M80-200v-80h400v80H80Zm0-200v-80h200v80H80Zm0-200v-80h200v80H80Zm744 400L670-354q-24 17-52.5 25.5T560-320q-83 0-141.5-58.5T360-520q0-83 58.5-141.5T560-720q83 0 141.5 58.5T760-520q0 29-8.5 57.5T726-410l154 154-56 56ZM560-400q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Z" />
+                            d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
                     </svg>
+                    <a href="./search.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                            fill="#414141">
+                            <path
+                                d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+                        </svg>
+                    </a>
                 </div>
-                <div class="hidden md:flex w-[460px]">
-                    <input class="w-full h-[40px] rounded-[6px] border-[1px] border-[#70C05B0] px-[20px] outline-none"
-                        placeholder="Найти товар" type="search">
+                <div class="hidden md:flex">
+                    <div class="w-[460px] relative">
+                        <input id="search-input"
+                            class="w-full h-[40px] rounded-[4px] border-[1px] border-[#70C05B0] px-[20px] outline-none"
+                            placeholder="Найти товар" type="search">
+                        <div id="search-cards"
+                            class="w-full flex flex-col gap-[10px] hidden max-h-[250px] overflow-y-scroll px-[10px] absolute rounded-b-[4px] top-[40px] py-[15px] bg-[white]">
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="hidden xl:flex flex items-center gap-[24px] text-[12px]">
@@ -777,7 +791,7 @@
             </div>
         </section>
 
-    </main> 
+    </main>
 
 
     <footer
@@ -851,26 +865,14 @@
             </svg>
             <p class="text-[11px]">Главная</p>
         </a>
-        <div class="flex flex-col items-center">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M12.7046 4.25632C13.8299 3.13054 15.3564 2.49805 16.9482 2.49805C18.5399 2.49805 20.0664 3.13051 21.1916 4.25624C22.3174 5.38152 22.95 6.90816 22.95 8.49987C22.95 10.0916 22.3175 11.6181 21.1917 12.7434C21.1917 12.7435 21.1917 12.7434 21.1917 12.7434L12.3517 21.5834C12.1565 21.7787 11.8399 21.7787 11.6446 21.5834L2.80461 12.7434C0.460963 10.3998 0.460963 6.59997 2.80461 4.25632C5.14826 1.91267 8.94807 1.91267 11.2917 4.25632L11.9982 4.96277L12.7046 4.25632C12.7046 4.25629 12.7046 4.25635 12.7046 4.25632ZM16.9482 3.49805C15.6217 3.49805 14.3496 4.02515 13.4118 4.96334L12.3517 6.02343C12.258 6.11719 12.1308 6.16987 11.9982 6.16987C11.8656 6.16987 11.7384 6.11719 11.6446 6.02343L10.5846 4.96343C8.63149 3.0103 5.46484 3.0103 3.51172 4.96343C1.55859 6.91655 1.55859 10.0832 3.51172 12.0363L11.9982 20.5228L20.4846 12.0363C21.4228 11.0986 21.95 9.82636 21.95 8.49987C21.95 7.17338 21.4229 5.90126 20.4847 4.96351C19.5469 4.02532 18.2747 3.49805 16.9482 3.49805Z"
-                    fill="#414141" />
-            </svg>
-            <p class="text-[11px]">Избранное</p>
-        </div>
-        <a class="flex flex-col items-center" href="./category.html"
-            class="flex cursor-pointer items-center flex-col gap-[7px]">
-            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#55556D">
+        <div id="search-category" class="flex flex-col justify-between items-center">
+            <svg class="flex sm:hidden" id="search" xmlns="http://www.w3.org/2000/svg" height="24px"
+                viewBox="0 -960 960 960" width="24px" fill="#414141">
                 <path
-                    d="M360-240h440v-107H360v107ZM160-613h120v-107H160v107Zm0 187h120v-107H160v107Zm0 186h120v-107H160v107Zm200-186h440v-107H360v107Zm0-187h440v-107H360v107ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Z" />
+                    d="M80-200v-80h400v80H80Zm0-200v-80h200v80H80Zm0-200v-80h200v80H80Zm744 400L670-354q-24 17-52.5 25.5T560-320q-83 0-141.5-58.5T360-520q0-83 58.5-141.5T560-720q83 0 141.5 58.5T760-520q0 29-8.5 57.5T726-410l154 154-56 56ZM560-400q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Z" />
             </svg>
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M6.5529 3.27638C6.67639 3.02939 6.97673 2.92928 7.22372 3.05277L17.2237 8.05277C17.4707 8.17627 17.5708 8.4766 17.4473 8.72359C17.3238 8.97058 17.0235 9.0707 16.7765 8.9472L6.7765 3.9472C6.52951 3.82371 6.4294 3.52337 6.5529 3.27638Z"
-                fill="#55556D" />
-            </svg>
-            <p class="text-[11px]">Category</p>
-        </a>
+            <p class="text-[11px]">Каталог</p>
+        </div>
         <a href="./products.html" class="flex flex-col items-center">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -914,8 +916,10 @@
     </div>
 
 
+
     <script src="../products-data/products-data.js"></script>
     <script src="../js/single.js"></script>
+    <script src="../js/loading.js"></script>
     <script src="../js/main_2.js"></script>
 </body>
 
